# TB

./: .gitignore  CLAUDE.md
backend/: .env.example  Dockerfile  bot.py  config.py  db.py  main.py  models.py  pionex_client.py  pyproject.toml  requirements.txt  scheduler.py
docs/: PLAN.md
frontend/: .env.local.example  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/balance/: route.ts
frontend/app/api/bot/config/: route.ts
frontend/app/api/bot/start/: route.ts
frontend/app/api/bot/state/: route.ts
frontend/app/api/bot/stop/: route.ts
frontend/app/api/dashboard/: route.ts
frontend/app/api/orders/: route.ts
frontend/app/api/prices/: route.ts
frontend/app/api/trades/: route.ts
frontend/app/bot/: page.tsx
frontend/app/chart/: page.tsx
frontend/app/config/: page.tsx
frontend/app/trades/: page.tsx
frontend/components/: card.tsx  dip-proximity.tsx  nav-rail.tsx  state-pipeline.tsx  top-bar.tsx
frontend/lib/: api.ts  hooks.ts  proxy.ts
supabase/migrations/: 001_trading_schema.sql
